--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1557,8 +1557,8 @@ input, select, textarea {
 			transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
 			padding: 4.5rem 2.5rem 1.5rem 2.5rem ;
 			position: relative;
-			width: 40rem;
-			max-width: 100%;
+			width: max-content;
+			max-width: 90%;
 			background-color: rgba(27, 31, 34, 0.85);
 			border-radius: 4px;
 			opacity: 0;
@@ -1845,3 +1845,4 @@ h2.major {
 .blog-row-title {
   text-transform: none !important;
 }
+
